src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A39.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A39 {
  interface A1;
  class A2;
  interface B1;

  association A1 (foo) -> (bar) B1 [1];
  association A2 (foo2) -> (bar2) B1 [1];
}
